--- a/001.HTML/000.T_Pj/css/main.css
+++ b/001.HTML/000.T_Pj/css/main.css
@@ -1,10 +1,11 @@
 @charset "utf-8";
 
-html, body {
+/* html,body {
     margin: 0;
     padding: 0;
-}
+} */
 
 body {
-    background: url(/1/001.HTML/000.T_Pj/img/mainbg.jpg);
+    background: url(/1/001.HTML/000.T_Pj/img/mainbg.jpg) no-repeat fixed;
+    background-size: cover;
 }
