--- a/001.HTML/000.T_Pj/css/main.css
+++ b/001.HTML/000.T_Pj/css/main.css
@@ -7,12 +7,10 @@
 
 body.m1 {
     background: url(/1/001.HTML/000.T_Pj/img/sogno.png);
-
-    /* background-color: #dfd1d5; */
+    width: 950px;
     /* background: url(/1/001.HTML/000.T_Pj/img/mainbg.jpg) no-repeat fixed center/cover; */
 }
-.top {
-    min-height: 108px;
-    background-color: #fff;
-    margin: -9px;
+
+h1 {
+    margin: 0 auto;
 }
