--- a/001.HTML/000.T_Pj/css/main.css
+++ b/001.HTML/000.T_Pj/css/main.css
@@ -14,7 +14,14 @@ body{
     /* background: url(/1/001.HTML/000.T_Pj/img/mainbg.jpg) no-repeat fixed center/cover; */
 }
 
+
+
 h1 {
-    text-align: center;
-    margin: 0 auto;
+    text-align: left;
+    /* padding-bottom: -5px; */
+
+}
+h1.img{
+    width: 100%;
+    margin: 10px;
 }
