--- a/001.HTML/003.DKB_PJ/css/main.css
+++ b/001.HTML/003.DKB_PJ/css/main.css
@@ -149,6 +149,10 @@ li {
 
     /* 배경가상요소 보다 위! 서브메뉴가 보이도록함! */
     z-index: 1;
+
+    /* 상단여유공간 패딩 */
+    padding-top: 10px;
+    /* 마진탑으로 처리하면 li와 떨어져서 동작이상발생 */
 }
 
 
@@ -165,25 +169,25 @@ li {
 
 /* 상위메뉴 li에 마우스 오버시 서브메뉴 보이기 */
 /* 첫번째 상위메뉴 li - 메뉴개수 3개
- -> 30px * 3 = 90px*/
+ -> 30px * 3 = 90px + 20px(여유공간) */
 .gnb>ul>li:nth-child(1):hover .smenu,
 .gnb>ul>li:nth-child(1):hover::after {
-    height: 90px;
+    height: 110px;
 }
 
 /* 세번째 상위메뉴 li */
 /* 세번째 상위메뉴 li - 메뉴개수 4개
- -> 40px * 3 = 120px */
+ -> 40px * 3 = 120px + 20px(여유공간) */
 .gnb>ul>li:nth-child(3):hover .smenu,
 .gnb>ul>li:nth-child(3):hover::after{
-    height: 120px;
+    height: 140px;
 }
 
 /* 네번째 상위메뉴 li */
-/* 네번째 상위메뉴 li - 메뉴개수 2개 -> 30px * 2 = 60px */
+/* 네번째 상위메뉴 li - 메뉴개수 2개 -> 30px * 2 = 60px + 20px(여유공간) */
 .gnb>ul>li:nth-child(4):hover .smenu,
 .gnb>ul>li:nth-child(4):hover::after{
-    height: 60px;
+    height: 80px;
 }
 
 /* 상위메뉴 li에 마우스 오버시 서브메뉴
@@ -373,17 +377,47 @@ li {
 /************************** 3.하단영역 ***************************/
 
 .info {
-    min-height: 240px;
+    font-family: 'Nanum Gothic', sans-serif;
+    /* min-height: 240px; */
     background-color: #ffffffb6;
     /* 반투명 배경색(알파값이 투명도) */
     padding: 15px;
-    font-family: 'Nanum Gothic', sans-serif;
 }
-/* .bmenu {
-    width: 720px;
-    max-width: 90%;
+/* 하단링크 */
+ul.bmenu {
+    max-width: 720px;
+    /* 최대width로 잡으면 최대 720px 보다 부모가 큰 경우
+    720px을 유지하다가 이것보다 작아지면 auto로 전환한다 */
     margin: 0 auto;
-    padding: 0;
-    list-style: none;
-    list-style: none;
-} */
+}
+.bmenu a{
+    color: #222;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 2;  /* 줄간격 */
+    margin: 0 5px;  /* 양쪽마진 */
+}
+/* 오버시 */
+.bmenu a:hover{
+    color: red;
+    text-decoration: underline;
+}
+/* 주소박스 */
+.info address{
+    max-width: 720px;
+    margin: 20px auto;  /* 마진: 위아래 양쪽 */
+    font: 12px "맑은고딕";  /* 주소는 기본 이탤릭체 */
+    line-height: 2;
+    text-align: center;
+    
+    border: 5px double #000;
+    padding: 10px 0;
+    /* 패딩: 위아래 양쪽 */
+}
+
+/* 하단로고 박스 */
+.blogo{
+    text-align: center;
+    /* 이미지 가운데정렬 */
+}
