--- a/001.HTML/000.T_Pj/Dune_Pj/Dune.css
+++ b/001.HTML/000.T_Pj/Dune_Pj/Dune.css
@@ -59,4 +59,11 @@ border-right: 5px;
 
 .gnb>ul>li>a{
     display: block;
+    height: 54px;
+    line-height: 54px;
+    box-sizing: border-box;
+}
+
+.gnb>ul>li>a:hover{
+    border-bottom: 1px solid lightskyblue;
 }
