--- a/001.HTML/000.T_Pj/Dune_Pj/Dune.css
+++ b/001.HTML/000.T_Pj/Dune_Pj/Dune.css
@@ -37,10 +37,16 @@ border-right: 5px;
     width: 190px;
 }
 
+/* ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ */
+ul,ol{
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
 .li{
     float: left;
 }
-/* ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ */
 .gnb{
     width: 600px;
     margin: 0 auto;
@@ -51,7 +57,7 @@ border-right: 5px;
 }
 
 .gnb a{
-    color: darkslateblue;
+    color: rgb(206, 128, 77);
     text-decoration: none;
     font-size: 16px;
     font-family: 'Gugi', cursive;
@@ -65,5 +71,5 @@ border-right: 5px;
 }
 
 .gnb>ul>li>a:hover{
-    border-bottom: 1px solid lightskyblue;
+    border-bottom: 1px solid rgb(149, 197, 228);
 }
