--- a/001.HTML/003.DKB_PJ/css/main.css
+++ b/001.HTML/003.DKB_PJ/css/main.css
@@ -246,6 +246,7 @@ h1.logo {
 
     display: none;
     /* 처음에 안보임 */
+    cursor: pointer;
 }
 
 /************************** 2.컨텐츠영역 ***************************/
