--- a/001.HTML/000.T_Pj/Dune_Pj/Dune.css
+++ b/001.HTML/000.T_Pj/Dune_Pj/Dune.css
@@ -27,7 +27,7 @@ border-right: 5px;
 /* ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ */
 .top{
     min-height: 120px;
-    background-color: rgba(0, 0, 0, 0.918);
+    background-color: rgba(0, 0, 0, 0.863);
 }
 .logo{
     margin: 0;
@@ -53,7 +53,7 @@ ul,ol{
 }
 
 .gnb>ul>li{
-    padding: 0 17px;
+    padding: 0 20px;
 }
 
 .gnb a{
@@ -72,4 +72,22 @@ ul,ol{
 
 .gnb>ul>li>a:hover{
     border-bottom: 1px solid rgb(149, 197, 228);
+}
+
+.smenu{
+    position: absolute;
+
+    height: 0;
+    overflow: hidden;
+    transition: height .4s ease-out;
+    z-index: 1;
+    padding-top: 10px;
+}
+
+.smenu li{
+    float: none;
+}
+
+.smenu a {
+    line-height: 30;
 }
