--- a/001.HTML/000.T_Pj/Dune_Pj/Dune.css
+++ b/001.HTML/000.T_Pj/Dune_Pj/Dune.css
@@ -1,87 +1,120 @@
 @charset "utf-8";
 
 @import url('https://fonts.googleapis.com/css2?family=Gugi&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Gothic+A1&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Hahmlet&display=swap');
 /* 
 font-family: 'Gugi', cursive;
- */
+font-family: 'Gothic A1', sans-serif;
+font-family: 'Hahmlet', serif;
+*/
+
 
 html,body{
     padding: 0;
     margin: 0;
 }
 body{
-    background: url(../imgDune/1.jpg)no-repeat fixed center/cover;
+    background: url(./imgDune/bg.jpg)no-repeat fixed center/cover;
+    font-family: 'Hahmlet', serif;
+    overflow-x: hidden;
 }
 
+
 .scb::-webkit-scrollbar{
-    width: 7px;
+    width: 5px;
 }
 .scb::-webkit-scrollbar-thumb{
-    background-color: rgba(207, 183, 43, 0.493);
+    background-color: #7b7672;
     border-radius: 5px;
 }
 .scb::-webkit-scrollbar-track{
-background-color: gray;
+background-color: silver;
 border-right: 5px;
 }
 /* ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ */
-.top{
-    min-height: 120px;
-    background-color: rgba(0, 0, 0, 0.863);
-}
-.logo{
-    margin: 0;
-    text-align: center;
-}
-.logo img{
-    width: 190px;
+/* ul{
+    border-bottom: 5px dotted lime;
+} */
+
+ol{
+    padding: 0;
 }
 
-/* ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ */
 ul,ol{
     margin: 0;
-    padding: 0;
     list-style: none;
 }
 
-.li{
-    float: left;
+ul::after,
+ol::after{
+    content: '';
+    display: block;
+    clear: both;
 }
+
+/* li{
+    float: left;
+} */
+
+h1.logo{
+    margin: 0;
+    text-align: center;
+}
+
+.logo img{
+    width: 214px;
+}
+/* --------------------------상----------------------------- */
+
+.top{
+    /* min-height: 120px; */
+    background-color: rgba(0, 0, 0, 0.863);
+}
+
 .gnb{
-    width: 600px;
+    width: 700px;
     margin: 0 auto;
 }
 
 .gnb>ul>li{
-    padding: 0 20px;
+    width: 100px;
+    text-align: center;
+    float: left;
+    /* padding: 0 20px; */
 }
 
 .gnb a{
-    color: rgb(206, 128, 77);
+    color: #ae834c;
     text-decoration: none;
     font-size: 16px;
-    font-family: 'Gugi', cursive;
+    font-family: 'Hahmlet', serif;
 }
 
 .gnb>ul>li>a{
     display: block;
-    height: 54px;
-    line-height: 54px;
+    height: 35px;
+    line-height: 30px;
     box-sizing: border-box;
 }
 
-.gnb>ul>li>a:hover{
-    border-bottom: 1px solid rgb(149, 197, 228);
+.gnb>ul>li a{
+    transition: .5s;
+}
+
+.gnb>ul>li:hover>a{
+    border-bottom: 1px solid #bd9559;
+    color: rgb(26, 18, 29);
+    background-color: #becec5;
 }
 
 .smenu{
     position: absolute;
-
     height: 0;
     overflow: hidden;
-    transition: height .4s ease-out;
-    z-index: 1;
+    transition: height .4s /* ease-in */;
     padding-top: 10px;
+    z-index: 1;
 }
 
 .smenu li{
@@ -89,5 +122,191 @@ ul,ol{
 }
 
 .smenu a {
-    line-height: 30;
+    line-height: 30px;
+    font-size: 14px;
+}
+
+.gnb>ul>li:nth-child(2):hover .smenu,
+.gnb>ul>li:nth-child(2):hover::after{
+    height: 160px
+}
+.gnb>ul>li:nth-child(4):hover .smenu,
+.gnb>ul>li:nth-child(4):hover::after{
+    height: 140px;
+}
+
+.gnb>ul>li:nth-child(2):hover::after,
+.gnb>ul>li:nth-child(4):hover::after{
+    border-bottom: 1px solid rgb(189, 149, 89);
+}
+
+.gnb>ul>li::after{
+    content: '';
+    display: block;
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 0;
+    background-color: #263229;
+    /* margin-top: 1px; */
+    transition: height .3s ease-out;
+}
+
+.ham{
+    color: #fff;
+    position: absolute;
+    top: 15px;
+    right: 10px;
+
+    width: 50px;
+    height: 50px;
+    font-size: 35px;
+    border: transparent;
+    /* border: 1px dotted lime; */
+    background-color: transparent;
+    cursor: pointer;
+}
+/* --------------------------중----------------------------- */
+
+.cont{
+    min-height: 1300px;
+    border: 4px solid blue;
+}
+
+#cbx{
+    position: relative;
+    top: 340px;
+    width: 75%;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+    /* margin: 10px; */
+    border: 4px solid #f00;
+}
+
+#cbx::after{
+    content: '';
+    display: block;
+    clear: both;
+}
+
+
+.cat{
+    width: 23%;
+    margin: 10px;
+    padding: 3px;
+    box-sizing: border-box;
+    float: left;
+    background-color: #383838;
+    box-shadow: 0 0 25px 5px rgb(0 0 0 / 60%);
+    transition: box-shadow 0.3s linear;
+}
+
+.cat:hover{
+    box-shadow: none;
+}
+
+.ci>img{
+    width: 100%;
+}
+
+.ci img:nth-child(2){
+    display: none;
+}
+
+.cat:hover .ci img:first-child{
+    display: none;
+}
+
+.cat:hover .ci img:nth-child(2){
+    display: inline;
+}
+
+
+.ci span{
+    margin: -15px;
+    display: block;
+    text-align: center;
+    /* margin-top: -10%; */
+}
+
+.ci span img{
+    width: 30%;
+}
+
+.ci span img:first-child{
+    opacity: 30%;
+}
+
+.ci span img:nth-child(2){
+    display: none;
+}
+
+.cat:hover .ci span img:first-child{
+    display: none;
+}
+
+.cat:hover .ci span img:nth-child(2){
+    display: inline;
+}
+
+
+/* .cat:hover .ci span img:first-child{
+    display: none;
+} */
+
+
+
+
+/* --------------------------하----------------------------- */
+.footer{
+    padding: 0 10px;
+}
+
+.footer, .footer-center{
+    /* position: fixed; */
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    margin: 0;
+    margin-top: 400px;
+    /* z-index: 10; */
+    font-weight: 400;
+    padding: 0 10px;
+}
+
+.footer-center .footer-link{
+    text-align: center;
+    margin: -1px;
+    padding: 0;
+}
+
+.footer-center .footer-link li{
+    display: inline-block;
+    margin: 5px 5px;
+}
+
+.footer-center .footer-link li a{
+    float: none;
+    display: block;
+    margin: 0;
+    text-decoration: none;
+}
+
+#credit{
+    margin: 5px 5px;
+    float: none;
+    text-align: center;
+    cursor: pointer;
+}
+
+.footer-center .copyright{
+    text-align: center;
+    margin-top: -12px;
+    margin-bottom: -6px;
+}
+
+.footer-link a:hover{
+    color: #fff;
 }
