--- a/001.HTML/006.CGV_PJ/003.site/css/main.css
+++ b/001.HTML/006.CGV_PJ/003.site/css/main.css
@@ -8,3 +8,70 @@
 body{
     background-color: #000;
 }
+
+/* 레이아웃 공통 클래스 */
+.part{
+    max-width: 1200px;
+    /* 확장성 있는 셋팅
+    width:1200px로 코딩하면 작은 화면에서는 가로 스크롤이 생김
+    -> 미디어쿼리를 사용하기전 화면에 적응하는 속성 셋팅이 필요하다
+    max-width: 1200px은 1200px보다 큰 화면에서
+    중앙 정렬되게 크기를 유지하다가 작아지면 화면에 붙어서
+    auto로 작동함 */
+    margin: 0 auto;
+    outline: 3px dotted dodgerblue;
+}
+
+/******************************************* 1. 상단영역 *******************************************/
+#top{
+    position: relative;
+    /* 부모자격 - .gnb */
+    height: 80px;
+    background: url(../images/curtain.jpg) repeat-x;
+}
+
+/* 1-1.페이지 타이틀 */
+h1.tit{
+    /* height: 100%;
+    - 안줘도 줄간격이 높이를 만들어줌 */
+    color: aquamarine;
+    font-size: 40px;
+    line-height: 80px;
+    /* 글자 세로 중앙정렬 높이값과 같은 줄간격 */
+    text-align: center;
+    font-family: 'Jua', sans-serif;
+    /* 그림자를 이용한 Glow효과 */
+    text-shadow: 0 0 12px aquamarine;
+}
+
+/******************************************* 2. 메인영역 *******************************************/
+#cont{
+    position: relative;
+    /* 부모자격 - 하위요소 */
+    height: 788px;
+    background: url(../images/bg.jpg) no-repeat;
+
+}
+
+/* <!-- 2-1. 스크린박스 --> */
+#screen{
+    position: absolute;
+    top: 135px;
+    left: 257px;
+    /* 나의 부모는? #cont */
+    width: 701px;
+    height: 398px;
+    background-color: #000;
+}
+
+/* 스크림 아이프레임 */
+#screen iframe{
+    width: 100%;
+    height: 100%;
+    border: none;/* 기본보더없앰 */
+}
+
+/******************************************* 3. 하단영역 *******************************************/
+#info{
+height: 100px;
+}
