--- a/001.HTML/006.CGV_PJ/003.site/css/main.css
+++ b/001.HTML/006.CGV_PJ/003.site/css/main.css
@@ -68,7 +68,22 @@ h1.tit{
 #screen iframe{
     width: 100%;
     height: 100%;
-    border: none;/* 기본보더없앰 */
+    border: none;   /* 기본보더없앰 */
+}
+/* 2-2.예고편선택메뉴 */
+.mlist{
+    position: absolute;
+    bottom: 56px;
+    left: 252px;
+}
+/* li디자인 */
+.mlist ul>li{
+    margin: 0 10px;
+}
+/* 포스터 이미지 */
+.mlist img{
+    width: 99px;
+    height: 140px;
 }
 
 /******************************************* 3. 하단영역 *******************************************/
