--- a/001.HTML/006.CGV_PJ/003.site/css/main.css
+++ b/001.HTML/006.CGV_PJ/003.site/css/main.css
@@ -153,7 +153,7 @@ h1.tit {
     color: red;
 }
 
-/* 서브메뉴 오버시 가상요소 빨간손가락 보이기 */
+/* 서브메뉴 오버시 가상요소 이모티콘 보이기 */
 .smenu li:first-child:hover a::after {
     float: right;
     /* 손가락 이미지가 인라인으로 오른쪽 끝에 옴 */
@@ -161,9 +161,6 @@ h1.tit {
     
     /* content: url(../images/ico_smenu_hand.png); */
 }
-
-
-
 /* ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ */
 /* ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ */
 .smenu li:nth-child(2):hover a::after {
@@ -183,13 +180,19 @@ h1.tit {
 /* ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ */
 /* ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ */
 
+/* 영사기 박스 */
+#cam{
+    position: absolute;
+    bottom: -14px;
+    right: -52px;
+    /* 부모는? .gnb */
+}
+/* 영사기 이미지 */
+#cam img{
+    width: 50px;
 
+}
 
-
-/* 임시로 첫번째만 빼고 나머지 서브메뉴 숨기기 */
-/* .gnb ul>li:first-child~li .smenu{
-    display: none;
-} */
 
 /******************************************* 2. 메인영역 *******************************************/
 #cont {
