--- a/001.HTML/006.CGV_PJ/003.site/css/main.css
+++ b/001.HTML/006.CGV_PJ/003.site/css/main.css
@@ -55,6 +55,13 @@ h1.tit {
     /* 나의 부모는? #top */
 }
 
+/* 전체메뉴 하위 메뉴박스(.glist) */
+.glist{
+    position: relative;
+    z-index: 1;
+    /* 영사기보다 위에 있어야 오버가 됨 */
+}
+
 /* GNB li 리스트 */
 .gnb li {
     position: relative;
@@ -157,12 +164,10 @@ h1.tit {
 .smenu li:first-child:hover a::after {
     float: right;
     /* 손가락 이미지가 인라인으로 오른쪽 끝에 옴 */
-    content: '🎄';
-    
     /* content: url(../images/ico_smenu_hand.png); */
+    content: '🎄';
 }
-/* ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ */
-/* ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ */
+
 .smenu li:nth-child(2):hover a::after {
     float: right;
     content: '🎅';
@@ -177,21 +182,72 @@ h1.tit {
     float: right;
     content: '🎁';
 }
-/* ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ */
-/* ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ */
 
 /* 영사기 박스 */
-#cam{
+#cam {
     position: absolute;
     bottom: -14px;
     right: -52px;
     /* 부모는? .gnb */
 }
+
 /* 영사기 이미지 */
-#cam img{
+#cam img {
+    position: relative;
+    z-index: 1;
+    /* 포지션이 있어야 z-index가 적용됨(영사기가 빔보다 위) */
     width: 50px;
 
+    /* 영사기 회전 */
+    transform: rotate(25deg);
+
+    /* 트랜지션: 속시이지 */
+    transition: transform .5s .3s;
+    /* 원상복귀시 빔이 없어지는 .3s 기다림 */
 }
+
+/* .gnb에 마우스 오버시 영사기 회전수평각 */
+.gnb:hover #cam img{
+transform: rotate(0deg);
+transition-delay: 0s;
+}
+
+/* 빔박스 */
+.bim{
+    position: absolute;
+    top: -16px;
+    right: 6px;
+    /* 나의 부모는? #cam */
+    width: 0; /* 오버시 200px */;
+    height: 70px;
+    background: url(../images/bim.png) no-repeat;
+    background-position: right center;
+    /* 배경포지션은 가로 오른쪽끝에 붙이고 세로방향 가로 */
+    background-size: auto 100%;/* 배경이미지 박스 높이값에 맞춤 */
+    
+    transition: width .3s linear ;
+}
+
+/* .gnb에 마우스 오버시 빔쏘기 애니 */
+.gnb:hover .bim{
+    width: 200px;
+    transition-delay: .5s;
+    /* 원본에 없는 지연시간설정
+    영사기가 도는동안 기다림 */
+
+    /* 애니메이션: 이시이지반방마 */
+    animation: bimAni .04s linear infinite alternate;
+}
+
+/* 빔이 너울너울 거리도록 애니메이션 키프레임 */
+@keyframes bimAni {
+    from{
+        opacity: 0.9;
+    }
+    to{
+        opacity: 0.5;
+    }
+}/* 키프레임 */
 
 
 /******************************************* 2. 메인영역 *******************************************/
