--- a/001.HTML/006.CGV_PJ/003.site/css/main.css
+++ b/001.HTML/006.CGV_PJ/003.site/css/main.css
@@ -19,7 +19,7 @@ body {
     중앙 정렬되게 크기를 유지하다가 작아지면 화면에 붙어서
     auto로 작동함 */
     margin: 0 auto;
-    outline: 3px dotted dodgerblue;
+    /* outline: 3px dotted dodgerblue; */
 }
 
 /******************************************* 1. 상단영역 *******************************************/
@@ -358,5 +358,70 @@ transition-delay: 0s;
 
 /******************************************* 3. 하단영역 *******************************************/
 #info {
+    position: relative;
+    /* 부모자격 - .sns */
     height: 100px;
+}
+
+/* 3-1. 회사정보박스 */
+#info address{
+    color: #fff;
+    font-style: normal;
+    font-family: 'Cute Font', cursive;
+    font-size: 18px;
+    line-height: 20px;
+
+    /* 안쪽여백 */
+    padding-top: 20px;
+    padding-left: 20px;
+}
+/* 하단로고 이미지 */
+#info img{
+    float: left;
+    /* 이미지는 왼쪽에 글자는 오른쪽으로 흐르게 */
+    margin-right: 20px;
+}
+
+/* 3-2. SNS 버튼 */
+.sns{
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    /* 부모는? #info */
+}
+
+/* sns li */
+.sns li{
+    width: 34px;
+    height: 34px;
+    /* 배경이미지 넣기(sprites) */
+    background: url(../images/sprites_logo.png)no-repeat;
+    
+    margin: 2px;
+
+    filter: grayscale(100%);
+}
+
+/* 페이스북 */
+.sns li:first-child {
+    background-position: -509px -429px;
+}
+/* 트위터 */
+.sns li:nth-child(2) {
+    background-position: -551px -429px;
+}
+/* 인스타그램 */
+.sns li:nth-child(3) {
+    background-position: -593px -429px;
+}
+
+/* sns a요소 확장 */
+.sns a{
+    display: block;
+    width: 100%;
+    height: 100%;
+}
+
+.sns li:hover{
+    filter: grayscale(0%);
 }
