--- a/001.HTML/006.CGV_PJ/003.site/css/main.css
+++ b/001.HTML/006.CGV_PJ/003.site/css/main.css
@@ -327,7 +327,7 @@ transition-delay: 0s;
 .movtxt {
     position: absolute;
     /* left는 설정하지 않고 젠틀하게 처리
-    ->각 lli위치에 그대로 있음 */
+    ->각 li위치에 그대로 있음 */
 
     top: 100%;
     /* 아래쪽에 나가있음 */
