--- a/001.HTML/000.T_Pj/Dune_Pj/Dune.css
+++ b/001.HTML/000.T_Pj/Dune_Pj/Dune.css
@@ -275,12 +275,14 @@ h1.logo {
     color: #85c4bb;
     font-size: 25px;
     font-family: 'Hahmlet', serif;
+    font-style: italic;
 }
 
 .txt li:nth-child(4) {
     color: #85c4bb;
     font-size: 19px;
     font-family: 'Hahmlet', serif;
+    font-style: italic;
 }
 
 .cat:hover .ci>img:nth-of-type(2) {
